--- a/src/assets/css/contryBox.scss
+++ b/src/assets/css/contryBox.scss
@@ -1,7 +1,70 @@
+@import "colors";
 .country-box{
-  .image-cover{
-    img{
-      width: 100%;
+  padding: 0px 25px;
+  box-sizing: border-box;
+  margin-bottom: 30px;
+  a{
+    text-decoration: none;
+  }
+
+  a:hover{
+    text-decoration: none;
+  }
+  .content{
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
+    padding-top: 0px;
+    border-radius: 5px;
+    overflow: hidden;
+    .image-cover{
+      img{
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+    .details{
+
+      padding:15px 20px;
+
+      p{
+        margin: 10px 0px;
+        font-size: 12px;
+        span{
+          font-weight: bold;
+        }
+      }
+    }
+    background: #fff;
+  }
+
+}
+
+.app.light{
+  .country-box{
+    a{
+      color: $_lightModeColor;
     }
   }
+}
+
+.app.dark{
+
+  .country-box{
+    .content{
+      background: $_darkModeElement;
+    }
+    a{
+      color: $_darkModeColor;
+    }
+  }
+}
+
+@media (min-width: 968px) {
+  .country-box{
+    .image-cover{
+      img{
+        height: 150px;
+      }
+    }
+  }
+
 }
