--- a/src/assets/css/pageDetails.scss
+++ b/src/assets/css/pageDetails.scss
@@ -47,7 +47,7 @@
           min-height: 200px;
           .row{
             margin: 0px;
-
+            align-content:flex-start;
           }
           p{
             font-size: 12px;
@@ -85,7 +85,7 @@
 
 @media (min-width: 968px) {
   .borders{
-    .p{
+    p{
       span:not(.border){
         display: inline-block;
       }
